# gossip-glomers-dist-sys

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
3d-broadcast/: CMakeLists.txt
3d-broadcast/include/: state.hpp
3d-broadcast/include/handlers/: broadcast.hpp  read.hpp
3d-broadcast/include/services/: distributor.hpp
3d-broadcast/include/workers/: distributor.hpp
3d-broadcast/src/: main.cpp
3d-broadcast/src/handlers/: broadcast.cpp  read.cpp
3d-broadcast/src/workers/: distributor.cpp
3e-broadcast/: CMakeLists.txt
3e-broadcast/include/handlers/: topology.hpp
3e-broadcast/include/workers/: distributor.hpp
3e-broadcast/src/: main.cpp
3e-broadcast/src/handlers/: broadcast.cpp  read.cpp  topology.cpp
3e-broadcast/src/services/: distributor.cpp
3e-broadcast/src/workers/: distributor.cpp
core/: CMakeLists.txt
core/include/: environment.hpp  handler.hpp  logging.hpp  maelstrom.hpp  messages.hpp  node.hpp  transport.hpp
core/include/detail/processors/: handlers.hpp  network.hpp  workers.hpp
core/include/detail/sync/: action.hpp  timer.hpp
core/include/network/: messages.hpp  network.hpp  transport.hpp
core/include/network/detail/: errors.hpp  timeouts.hpp
core/include/network/services/: key_value_storage.hpp
core/include/routines/: handler.hpp  service.hpp  worker.hpp
core/include/utils/: unit.hpp
core/src/: maelstrom.cpp  messages.cpp  node.cpp
core/src/detail/processors/: network.cpp
core/src/detail/sync/: timer.cpp
core/src/network/: messages.cpp  network.cpp  transport.cpp
maelstrom/: CMakeLists.txt  Makefile
maelstrom/include/: environment.hpp  node.hpp
maelstrom/include/detail/network/: console_transport.hpp  in_memory_transport.hpp  transport.hpp
maelstrom/include/detail/processors/: handlers.hpp  network.hpp  workers.hpp
maelstrom/include/detail/sync/: action.hpp  queue.hpp  timer.hpp
maelstrom/include/log/: logging.hpp
maelstrom/include/maelstrom/: environment.hpp  node.hpp
maelstrom/include/maelstrom/detail/network/: console_transport.hpp  in_memory_transport.hpp  transport.hpp
maelstrom/include/maelstrom/detail/processors/: handlers.hpp  network.hpp  workers.hpp
maelstrom/include/maelstrom/detail/sync/: queue.hpp  timer.hpp
maelstrom/include/maelstrom/log/: logging.hpp
maelstrom/include/maelstrom/network/: messages.hpp  network.hpp
maelstrom/include/maelstrom/network/services/: kv_storage.hpp
maelstrom/include/maelstrom/routines/: handler.hpp  worker.hpp
maelstrom/include/network/: console_transport.hpp  in_memory_transport.hpp  messages.hpp  network.hpp  transport.hpp
maelstrom/include/network/detail/: errors.hpp  timeouts.hpp
maelstrom/include/network/services/: key_value_storage.hpp  kv_storage.hpp
maelstrom/include/network/transport/: console_transport.hpp  in_memory_transport.hpp  transport.hpp
maelstrom/include/routines/: handler.hpp  worker.hpp
maelstrom/include/utils/: unit.hpp
maelstrom/src/detail/network/: console_transport.cpp  in_memory_transport.cpp
maelstrom/src/detail/processors/: network.cpp
maelstrom/src/detail/sync/: timer.cpp
maelstrom/src/network/: console_transport.cpp  in_memory_transport.cpp  messages.cpp  network.cpp  transport.cpp
maelstrom/src/network/transport/: console_transport.cpp  in_memory_transport.cpp
maelstrom/tests/: echo_deferred_test.cpp  echo_test.cpp  echo_tests.cpp  init_test.cpp
maelstrom/tests/processors/: handlers_test.cpp  network_test.cpp
tasks/: CMakeLists.txt  Makefile
tasks/1-echo/: CMakeLists.txt
tasks/2-unique_ids/: CMakeLists.txt
tasks/2-unique_ids/src/: main.cpp
tasks/3a-broadcast/: CMakeLists.txt
tasks/3b-broadcast/: CMakeLists.txt
tasks/3c-broadcast/: CMakeLists.txt
tasks/3c-broadcast/include/: state.hpp
tasks/3d-broadcast/: CMakeLists.txt
tasks/3d-broadcast/include/workers/: distributor.hpp
tasks/3d-broadcast/src/handlers/: topology.cpp
tasks/3e-broadcast/: CMakeLists.txt
tasks/3e-broadcast/include/handlers/: broadcast.hpp
tasks/3e-broadcast/src/handlers/: broadcast.cpp
tasks/4-gcounter/: CMakeLists.txt
tasks/4-gcounter/include/: ops.hpp
tasks/broadcast/part1/: CMakeLists.txt  Makefile
tasks/broadcast/part1/include/: handlers.hpp  state.hpp
tasks/broadcast/part1/include/handlers/: broadcast.hpp  topology.hpp
tasks/broadcast/part1/src/: main.cpp
tasks/broadcast/part2/: CMakeLists.txt  Makefile
tasks/broadcast/part2/include/: handlers.hpp  state.hpp
tasks/broadcast/part2/include/handlers/: broadcast.hpp  read.hpp
tasks/broadcast/part2/src/: handlers.cpp  main.cpp
tasks/broadcast/part3/: CMakeLists.txt  Makefile
tasks/broadcast/part3/include/: handlers.hpp  state.hpp
tasks/broadcast/part3/include/handlers/: broadcast.hpp
tasks/broadcast/part3/src/: main.cpp
tasks/broadcast/part4/: CMakeLists.txt  Makefile
tasks/broadcast/part4/include/: state.hpp
tasks/broadcast/part4/include/handlers/: read.hpp  topology.hpp
tasks/broadcast/part4/include/workers/: distributor.hpp
tasks/broadcast/part4/src/: main.cpp
tasks/broadcast/part4/src/handlers/: broadcast.cpp  read.cpp  topology.cpp
tasks/broadcast/part4/src/workers/: distributor.cpp
tasks/broadcast/part5/: CMakeLists.txt  Makefile
tasks/broadcast/part5/include/: state.hpp
tasks/broadcast/part5/include/handlers/: broadcast.hpp  read.hpp  topology.hpp
tasks/broadcast/part5/src/: main.cpp
tasks/echo/: CMakeLists.txt  Makefile
tasks/echo/include/: echo.hpp
tasks/echo/src/: main.cpp
tasks/gcounter/: CMakeLists.txt  Makefile  README.md
tasks/gcounter/include/: operations.hpp  state.hpp
tasks/gcounter/src/: main.cpp  operations.cpp  ops.cpp
tasks/kafka/part1/: CMakeLists.txt  Makefile
tasks/kafka/part1/include/: handlers.hpp  state.hpp
tasks/kafka/part1/src/: handlers.cpp  main.cpp
tasks/kafka/part2/: CMakeLists.txt  Makefile  README.md
tasks/kafka/part2/include/: handlers.hpp  state.hpp
tasks/kafka/part2/src/: handlers.cpp  main.cpp
tasks/unique_ids/: CMakeLists.txt  Makefile
tasks/unique_ids/include/: unique_id.hpp
tasks/unique_ids/src/: main.cpp
(+52 files in other folders)
