add_subdirectory(echo)

add_subdirectory(unique_ids)

add_subdirectory(broadcast/part1)
add_subdirectory(broadcast/part2)
add_subdirectory(broadcast/part3)
add_subdirectory(broadcast/part4)
add_subdirectory(broadcast/part5)

add_subdirectory(gcounter)

add_subdirectory(kafka/part1)
add_subdirectory(kafka/part2)